--- a/HearthisAt-Player/UI/Screens/Feed/Feed.storyboard
+++ b/HearthisAt-Player/UI/Screens/Feed/Feed.storyboard
@@ -28,7 +28,7 @@
         <!--Feed View Controller-->
         <scene sceneID="pK9-8x-6nK">
             <objects>
-                <viewController storyboardIdentifier="FeedViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uYM-rj-s86" customClass="FeedViewController" customModule="HearthisAt_Player" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FeedViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uYM-rj-s86" customClass="FeedViewController" customModule="HearthisAt_Player" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="24t-3g-53N"/>
                         <viewControllerLayoutGuide type="bottom" id="M2a-BD-dt2"/>
@@ -38,7 +38,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PY6-Ri-jZH">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="44" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <sections/>
@@ -51,8 +51,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="PY6-Ri-jZH" secondAttribute="trailing" id="6Ck-Or-4NI"/>
-                            <constraint firstItem="PY6-Ri-jZH" firstAttribute="top" secondItem="EXP-p7-8YC" secondAttribute="top" id="8SQ-rI-D7K"/>
                             <constraint firstItem="PY6-Ri-jZH" firstAttribute="leading" secondItem="EXP-p7-8YC" secondAttribute="leading" id="YpP-kO-64P"/>
+                            <constraint firstItem="PY6-Ri-jZH" firstAttribute="top" secondItem="24t-3g-53N" secondAttribute="bottom" id="gi1-Ri-yYx"/>
                             <constraint firstItem="M2a-BD-dt2" firstAttribute="top" secondItem="PY6-Ri-jZH" secondAttribute="bottom" id="jUX-RK-gcZ"/>
                         </constraints>
                     </view>
