Add duration display to track cells

--- a/HearthisAt-Player/UI/Screens/Tracks/Views/TrackItemCell.xib
+++ b/HearthisAt-Player/UI/Screens/Tracks/Views/TrackItemCell.xib
@@ -24,7 +24,7 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1:23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MqU-TD-hAU">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="1:23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MqU-TD-hAU">
                         <rect key="frame" x="326.5" y="16" width="32.5" height="46.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -42,6 +42,10 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <connections>
+                <outlet property="durationLabel" destination="MqU-TD-hAU" id="nrh-Tp-0dL"/>
+                <outlet property="titleLabel" destination="gOd-m5-3LP" id="P8T-Kz-R0T"/>
+            </connections>
             <point key="canvasLocation" x="-133.5" y="-33.5"/>
         </tableViewCell>
     </objects>
