--- a/HearthisAt-Player/UI/Screens/Tracks/Tracks.storyboard
+++ b/HearthisAt-Player/UI/Screens/Tracks/Tracks.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ffP-p0-cnu">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ffP-p0-cnu">
                                 <rect key="frame" x="0.0" y="184.5" width="375" height="482.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -29,16 +29,21 @@
                                     <outlet property="delegate" destination="ZoN-YF-Tz7" id="GmK-ls-hLQ"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6i-Zl-TBT" customClass="TracksHeaderView" customModule="HearthisAt_Player" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p6i-Zl-TBT" customClass="TracksHeaderView" customModule="HearthisAt_Player" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="184.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="TEQ-6A-7eT">
+                                <rect key="frame" x="177" y="323" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="AQi-jP-hnS" firstAttribute="top" secondItem="ffP-p0-cnu" secondAttribute="bottom" id="6A3-CQ-kxE"/>
+                            <constraint firstItem="TEQ-6A-7eT" firstAttribute="centerY" secondItem="ffP-p0-cnu" secondAttribute="centerY" id="8jg-rN-z9S"/>
                             <constraint firstItem="ffP-p0-cnu" firstAttribute="leading" secondItem="att-Q5-cN6" secondAttribute="leading" id="CHE-Ju-JFA"/>
                             <constraint firstItem="p6i-Zl-TBT" firstAttribute="leading" secondItem="att-Q5-cN6" secondAttribute="leading" id="Q5k-nd-yQ9"/>
+                            <constraint firstItem="TEQ-6A-7eT" firstAttribute="centerX" secondItem="ffP-p0-cnu" secondAttribute="centerX" id="c1T-My-PPQ"/>
                             <constraint firstAttribute="trailing" secondItem="ffP-p0-cnu" secondAttribute="trailing" id="m75-LU-EMB"/>
                             <constraint firstItem="p6i-Zl-TBT" firstAttribute="top" secondItem="att-Q5-cN6" secondAttribute="top" id="oem-Up-Tw7"/>
                             <constraint firstItem="ffP-p0-cnu" firstAttribute="top" secondItem="p6i-Zl-TBT" secondAttribute="bottom" id="ydH-mQ-b0d"/>
@@ -46,6 +51,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="TEQ-6A-7eT" id="E7F-NV-5wZ"/>
                         <outlet property="headerView" destination="p6i-Zl-TBT" id="1ar-JG-dRN"/>
                         <outlet property="tableView" destination="ffP-p0-cnu" id="Md2-dZ-0S6"/>
                     </connections>
